<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit_layout" />

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_rename" />

    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_duplicate_layout" />

    <item
        android:id="@+id/action_set_default"
        android:icon="@drawable/ic_star"
        android:title="@string/action_set_default" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/action_export_layout" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_confirm"
        android:iconTint="@color/delete_button_bg" />
</menu>
